fixed nav overflow

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,7 +10,6 @@ footer {
   bottom: 0;
   text-align: center;
   width: 100%;
-  max-width: 100vw;
   height: 2.5rem;
 }
 nav h2 {
@@ -31,8 +30,8 @@ nav h2 {
 }
 .btn {
   border-radius: .6rem;
-  width: 10rem;
-  height: 3rem;
+  width: 13rem;
+  height: 5rem;
   font-size: 1.2rem;
   box-shadow: 0 0 .2rem black;
 }
@@ -64,25 +63,23 @@ nav h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
   box-sizing: border-box;
   position: relative;
   padding-bottom: 2.5rem;
 }
 .navbar {
-    display: flex;
-    background-color: hsl(180, 10%, 81%);
-    border-bottom: .1rem solid rgba(0, 0, 0, 0.267);
-    box-sizing: border-box;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0.7rem 2rem;
-    width: 100%;
-    margin-bottom: 1rem;
-    position: sticky;
-    top: 0;
-    z-index: 99;
+  background-color: hsl(180, 10%, 81%);
+  border-bottom: .1rem solid rgba(0, 0, 0, 0.267);
+  box-sizing: border-box;
+  align-items: center;
+  padding: 1rem 2rem;
+  width: 100%;
+  margin-bottom: 1rem;
+  position: sticky;
+  top: 0;
+  z-index: 99;
 }
 .user-item { 
   background-color: hsl(180, 10%, 81%);
@@ -90,8 +87,8 @@ nav h2 {
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  width: 25rem;
-  height: 15rem;
+  width: 35rem;
+  height: 20rem;
   border: solid .2rem rgba(0, 0, 0, 0.199);
   padding: .5rem 1rem;
   box-sizing: border-box;
@@ -102,15 +99,12 @@ nav h2 {
 .avatar {
   box-shadow: .6rem -.1rem 1.3rem .4rem rgba(82,171,231,0.6671043417366946);
   position: relative;
-  margin: .5rem .5rem;
+  margin: .6rem 1rem;
   border-radius: 50%;
   height: 7rem;
   width: 7rem;
   align-self: flex-end;
   z-index: 0;
-}
-.spinner {
-  z-index: 9999;
 }
 .user-details {
   background-color: hsl(180, 10%, 81%);
@@ -118,9 +112,9 @@ nav h2 {
   flex-direction: column;
   justify-content:space-around;
   width: 50rem;
-  height: 20rem;
-  margin: .5rem auto;
-  padding: .5rem 1rem;
+  height: 30rem;
+  margin: .6rem auto;
+  padding: 1.5rem 1rem;
   border: .2rem solid rgba(0, 0, 0, 0.199);
   border-radius: .5rem;
   box-shadow: gray .1rem .2rem .3rem .2rem;
@@ -136,7 +130,7 @@ nav h2 {
     font-size: 1.3rem;
   }
   .email {
-    line-height: 1.7rem;
+    line-height: 2rem;
   }
   .user-details {
     max-width: 25rem;
@@ -146,12 +140,8 @@ nav h2 {
   .user-details img {
     visibility: hidden;
   }
-  .avatar {
-    height: 5rem;
-    width: 5rem;
-  }
   .user-item {
-    max-width: 22rem;
+    max-width: 21rem;
   }
   .navbar {
     justify-content: center;
